fix: stack overflow and apply button
yee

--- a/data/resources/style.css
+++ b/data/resources/style.css
@@ -2,6 +2,10 @@
     border-radius: 8px;
 }
 
+footer>box {
+    margin: 6px;
+}
+
 .sidebar-item {
     padding: 4px;
     padding-left: 8px;
